# bigbee-core

./: .gitignore  pyproject.toml
bigbee_core/api/shared/: handle_with_manager_helper.py  manage_and_present_helper.py  manager_result.py  presenter_result.py
bigbee_core/api/shared/enums/: status_codes.py
bigbee_core/db/: dependencies.py  engine.py  session.py  session_context.py
bigbee_core/enums/: delete_mode.py
bigbee_core/security/: password_hasher.py
bigbee_core/services/shared/: base_service.py  service_result.py
bigbee_core/session/: bridge.py
bigbee_core/utils/: map_navigator.py
bigbee_core/web/: autoload_js.py  view_data.py
bigbee_core/web/components/div/: dto.py  presenter.py  template.pug
bigbee_core/web/components/form/: dto.py  presenter.py  template.pug  template_data.py
bigbee_core/web/components/form/submit_button/: dto.py  presenter.py  template.pug
bigbee_core/web/components/link/: dto.py  presenter.py  template.pug
bigbee_core/web/components/text_input/: dto.py  presenter.py  template.pug
bigbee_core/web/rendering/: html.py  templates.py
bigbee_core/web/static/js/: component_initializer.js  html_body.js  remote_forms.js  remote_links.js
