[tool.poetry]
name = "bigbee-core"
version = "0.1.0"
description = "Library for code shared across Bigbee assets."
authors = ["Joseph Villa <joseph@bigbeelabs.com>"]
readme = "README.md"
packages = [{ include = "bigbee_core" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
alembic = "^1.16.4"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"